# edmundgoodman.github.io

./: .gitignore  .gitmodules  CNAME  Makefile  README.md  TODO.md  config.toml  happy-birthday.html  index.html  index.xml  robots.txt  sitemap.xml
.github/workflows/: gelato.yml  gh-pages.yml
about/: index.html
about-me/: index.html
archetypes/: default.md  posts.md
atlas/: index.html
categories/: index.html  index.xml
categories/development/: index.html  index.xml
categories/golang/: index.xml
content/: about.md  atlas.md  gelato  test.html
content/gelato/: 24_10_27.md  24_10_28.md  24_10_31.md  24_12_16.md
content/posts/: a_faster_gelato.md  benchmarking_llvm_mlir.md  blog_canary.md  blog_items.md  cs260_algorithms_revision_lecture.md  cube_rule_of_food_lasagna.md  dcs_innovation_day.md  fixing_endeavouros.md  git_bisect.md  git_good.md  github_ssh_authentication.md  github_token_authentication.md  gpg_keys.md  hello_there.md  i_like_markdown_but.md  installing_mlir_on_macos.md  ordering_of_zsh_config.md  p3hpc.md  parallelism_in_egg.md  peterhouse_recording.md  profiling_with_perf.md  roofline_models.md  the_mathematics_of_lasagne.md  update_bot.md  why_i_dont_like_js.md  why_i_type_check_python.md
content/posts/drafts/: bf_2_dialects.md  (+15 more)
content/projects/: ees.md  example_five.md  example_four.md  example_one.md  example_three.md  example_two.md  igem_modelling.md  igem_wiki.md  rouse_research.md
css/: fontdecorative.css  styles.css  styles.min.css
gelato/: index.html  index.xml
js/: main.js
posts/: index.html  index.xml
projects/: index.html  index.xml
projects/ees/: index.html
projects/igem_modelling/: index.html
projects/igem_wiki/: index.html
projects/rouse_research/: index.html
scripts/gelato/: .gitignore  Makefile  README.md  download.py  pyproject.toml
scripts/gelato/markdown/: 24_10_27.md
scss/: main.c83abf7d8ed35d9b6a909f0d5a1a06a4d6e901c4b7640ee2683f59d2fb8f09be.css  main.min.css
static/: flex.html  happy-birthday.html
tags/: index.html  index.xml
tags/demo/: index.html  index.xml
tags/development/: index.html  index.xml
tags/go/: index.html  index.xml
tags/golang/: index.html  index.xml
tags/hugo/: index.html  index.xml
tags/templates/: index.html  index.xml
tags/themes/: index.html  index.xml
themes/minimal-theme/: LICENSE.md
themes/simple-theme/: LICENSE.md
(+384 files in other folders)
