[project]
name = "jacks-gelato-scraper"
version = "0.1.0"
description = "A simple tool to scrape the Jack's Gelato menu"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gdown>=5.2.0",
    "python-dateutil>=2.9.0.post0",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.13.0",
    "ruff>=0.7.1",
    "types-python-dateutil>=2.9.0.20241003",
]


[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
    ### From https://github.com/jerry-git/pytest-split/blob/master/pyproject.toml
    "ANN",      # Type hints related, let mypy handle these.
    "COM812",   # "Trailing comma missing". If black is happy, I'm happy.
    "E501",     # "Line too long". If black is happy, I'm happy.
    "EM101",    # "Exception must not use a string literal, assign to variable f»
    "EM102",    # "Exception must not use an f-string literal, assign to variabl»
    # "RET504",   # "Unnecessary variable assignment before `return` statement"
    "S101",     # "Use of `assert` detected"
    "SIM108",   # "Use ternary operator ...". Ternary is harmful for readability»
    "TRY003",   # "Avoid specifying long messages outside the exception class"
    # "D",      # Docstrings related. We want to keep this to replace `pydocstyl»
    "D203",     # Disable incompatible docstring rules to avoid warnings
    "D212",     #  "
    "D213",     #  "
    "D413",     #  "
    "ISC001",   # Conflicts with autoformatter
    ### Edmund's preferences
    "UP009",    # "UTF-8 encoding declaration is unnecessary". Adding UTF-8 prag»
    "T201",     # Allow print statements!
    "INP001",   # "Add an `__init__.py`". The `test` directory should be a names»
    "I",        # Ignore import sorting, as we using `isort` instead
    ]
# Support Python 3.10+.
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true
# https://blog.wolt.com/engineering/2021/09/30/professional-grade-mypy-configura»
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
[[tool.mypy.overrides]]
module = "gdown.*"
ignore_missing_imports = true
